--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "build": "npm install && npm install --prefix client && npm run build --prefix client",
+    "start": "node api/server.js"
   },
   "keywords": [],
   "author": "",
